tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-38/test000008.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c
Line: 19
Stack: 
	#0 00000047 in remove_from_list (head=23881760, node=23966208) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:19
	#1 00000090 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:40
Info: 
	address: (ReadLSB w64 0 U0:[(Add w32 7
                            N0:(Extract w32 0 (Add w64 18446744073685586080
                                                       (ReadLSB w64 8 a1))))=(Read w8 23 a1),
                   (Add w32 6 N0)=(Read w8 22 a1),
                   (Add w32 5 N0)=(Read w8 21 a1),
                   (Add w32 4 N0)=(Read w8 20 a1),
                   (Add w32 3 N0)=(Read w8 19 a1),
                   (Add w32 2 N0)=(Read w8 18 a1),
                   (Add w32 1 N0)=(Read w8 17 a1),
                   N0=(Read w8 16 a1)] @ const_arr5)
	example: 23965577
	range: [23965576, 23965583]
	next: object at 23965584 of size 24
		MO14[24] allocated at main():  %1 = call noalias i8* @malloc(i64 24) nounwind, !dbg !74
	prev: object at 23965552 of size 8
		MO28[8] allocated at remove_from_list():  %head_addr = alloca %struct.Node_t**, align 8
